[sign-in API] 커스텀(앱 자체) 로그인만 할 수 있게 구현
