# swagger.yaml
@@ -151,6 +151,47 @@ paths:
           description: Conflict (display name conflict)
         500:
           description: Internal Server Error
+  /user/sign-in:
+    post:
+      summary: 로그인
+      tags: [User]
+      parameters:
+        - in: body
+          name: user
+          description: userId는 email만 받는다.
+          schema:
+              type: object
+              required:
+                - userId
+                - secretKey
+              properties:
+                userId:
+                  type: string
+                  example: ganghee@nate.com
+                secretKey:
+                  type: string
+                  example: 1234qwer
+      responses:
+        200:
+          description: 회원 로그인 성공
+          schema:
+            type: object
+            properties:
+                session:
+                    type: string
+                    example: 0q8DptSJiinhbspcQwK6wxUtvNkmNano
+                userImg:
+                    type: string
+                    example: https://i.pinimg.com/564x/d0/be/47/d0be4741e1679a119cb5f92e2bcdc27d.jpg
+                userName:
+                    type: string
+                    example: 쓰담이
+        400:
+          description: Bad Request (body should have required property [userId/ secretKey])
+        401:
+          description: No userId or No secretKey
+        500:
+          description: Internal Server Error
   /user/sign-out:
     get:
       summary: 사용자 로그아웃
